unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__AverageStopTimeHours__c.field-meta.xml
<CustomField>
    <fullName>maps__AverageStopTimeHours__c</fullName>
    <inlineHelpText>Durée moyenne des événements d&#39;arrêt définie par l&#39;utilisateur, en heures</inlineHelpText>
    <label>Average Stop Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>