unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__AverageStopTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>maps__AverageStopTimeMinutes__c</fullName>
    <inlineHelpText>Durée moyenne des événements d&#39;arrêt définie par l&#39;utilisateur, en minutes</inlineHelpText>
    <label>Average Stop Time (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>