unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__CountOfEventsDeviceBatteryOn__c.field-meta.xml
<CustomField>
    <fullName>maps__CountOfEventsDeviceBatteryOn__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of the device battery on events recorded that day, as defined in the daily summary configuration</description>
    <inlineHelpText>Nombre d&#39;événements Batterie de l&#39;appareil activée enregistrés ce jour, tels que définis dans la configuration du résumé condylien</inlineHelpText>
    <label>Count of Events - Device Battery On</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>