unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__CountOfSummaryEventsStops__c.field-meta.xml
<CustomField>
    <fullName>maps__CountOfSummaryEventsStops__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Nombre d&#39;événements Arrêts enregistrés ce jour, tels que définis dans la configuration du résumé condylien</inlineHelpText>
    <label>Count of Events - Stops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>