unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__Date__c.field-meta.xml
<CustomField>
    <fullName>maps__Date__c</fullName>
    <description>Date and time report generated</description>
    <inlineHelpText>Date à laquelle ce résumé s&#39;applique</inlineHelpText>
    <label>Summary Date</label>
    <type>Date</type>
</CustomField>