unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__DeviceId__c.field-meta.xml
<CustomField>
    <fullName>maps__DeviceId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Fournisseur de l&#39;appareil concaténé avec ID de l&#39;appareil</inlineHelpText>
    <label>Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>