unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__DriveTimeHours__c.field-meta.xml
<CustomField>
    <fullName>maps__DriveTimeHours__c</fullName>
    <inlineHelpText>Temps total avec le moteur allumé, en heures</inlineHelpText>
    <label>Drive Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>