unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__DrivingOutsideWorkingHours__c.field-meta.xml
<CustomField>
    <fullName>maps__DrivingOutsideWorkingHours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indication if a trip took place outside of denoted working hours</description>
    <inlineHelpText>Indique si un trajet a été effectué hors des heures de travail désignées</inlineHelpText>
    <label>Driving Outside Working Hours</label>
    <type>Checkbox</type>
</CustomField>