unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__HardAccelerationCount__c.field-meta.xml
<CustomField>
    <fullName>maps__HardAccelerationCount__c</fullName>
    <description>Number of Quick Acceleration message count</description>
    <inlineHelpText>Nombre de messages de l&#39;appareil indiquant un événement d&#39;accélération rapide ce jour (si disponible)</inlineHelpText>
    <label>Number of Hard Acceleration Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>