unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__HardBrakingCount__c.field-meta.xml
<CustomField>
    <fullName>maps__HardBrakingCount__c</fullName>
    <inlineHelpText>Nombre de messages de l&#39;appareil indiquant un événement de freinage brutal ce jour (si disponible)</inlineHelpText>
    <label>Number of Hard Braking Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>