unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__LastMessageContent__c.field-meta.xml
<CustomField>
    <fullName>maps__LastMessageContent__c</fullName>
    <description>This field represents the full data content of the last point received by aws for the day.</description>
    <inlineHelpText>Ce champ représente le contenu complet des données du dernier point reçu ce jour par AWS.</inlineHelpText>
    <label>Last Message Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>