unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__LastMessageTimestamp__c.field-meta.xml
<CustomField>
    <fullName>maps__LastMessageTimestamp__c</fullName>
    <description>This field represents the date and time of the last point received by aws for the day.</description>
    <inlineHelpText>Ce champ représente l&#39;heure et la date du dernier point reçu ce jour par AWS.</inlineHelpText>
    <label>Last Message Timestamp</label>
    <type>DateTime</type>
</CustomField>