unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__LiveDailySummaryConfig__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveDailySummaryConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Référence à la configuration sur laquelle le résumé est basé</inlineHelpText>
    <label>Live Daily Summary Configuration</label>
    <referenceTo>maps__LiveDailySummaryConfig__c</referenceTo>
    <relationshipLabel>Maps Live Asset Daily Summaries</relationshipLabel>
    <relationshipName>LiveAssetDailySummaries</relationshipName>
    <type>Lookup</type>
</CustomField>