unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__MaximumSpeedKPH__c.field-meta.xml
<CustomField>
    <fullName>maps__MaximumSpeedKPH__c</fullName>
    <inlineHelpText>Valeur de vitesse unique maximale reçue ce jour (en km/h)</inlineHelpText>
    <label>Maximum Speed (KPH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>