unpackaged/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__TripDistanceKm__c.field-meta.xml
<CustomField>
    <fullName>maps__TripDistanceKm__c</fullName>
    <inlineHelpText>Distance totale parcourue en kilomètres</inlineHelpText>
    <label>Total Distance (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>